add support to jscoverage

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "information radiator",
   "scripts": {
     "start": "node ./lib/server.js",
-    "test": "make test"
+    "test": "make jscoverage test"
   },
   "main": "./lib/server.js",
   "repository": {
@@ -30,6 +30,7 @@
     "jquery"    :  "1.8.x",
     "jsdom"     :  "0.5.x",
     "supertest" :  "0.5.x",
+    "visionmedia-jscoverage" :  "1.0.0",
     "nock"      :  "0.16.x"
   },  
   "license": "MIT",
