add sonar coverage support

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,7 @@ sonar.tests=test
 sonar.language=js
 
 # Advanced parameters
+sonar.javascript.testframework=jstestdriver
 sonar.javascript.jstestdriver.reportsfolder=coverage
 sonar.javascript.jstestdriver.coveragefile=coverage.lcov
 sonar.dynamicAnalysis=reuseReports
